LPT-2348 -  fix SJP schema validation issue (#203)